samples/_failures_safe/1760887128_4f8d2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31d3caec.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_31d3caec.c:150:16: error: missing terminating " character
  150 |         printf("Token %
      |                ^~~~~~~~
./samples/SAFE/__tmp_31d3caec.c:150:9: error: expected expression at end of input
  150 |         printf("Token %
      |         ^~~~~~
./samples/SAFE/__tmp_31d3caec.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31d3caec.c:150:9: error: expected declaration or statement at end of input
